<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_mode"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/shouji" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/xiexian" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_num"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@drawable/bg_mode"
                android:gravity="center_vertical"
                android:hint="@string/input_ver"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="4"
                android:background="@drawable/btn_bg_mode"
                android:text="@string/get_ver"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/validate_in_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/ver_resent"
            android:textColor="@color/burlywood"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_mode"
            android:text="@string/next"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>